# arithmetic-coding

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Arithmetic/: arithmetic.cpp  arithmetic.hpp
src/Fraction/: Fraction.cpp  Fraction.hpp
src/Utils/: utils.cpp  utils.hpp
